# lianghua

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  SIGNING.md  backend_audit_report.md  data_requirements_report.md  docker-compose.yml  frontend_bug_report.md  lianghua-backend.spec  package-lock.json  package.json  start-lianghua.sh  start_backend.sh  stop-lianghua.sh  stop_backend.sh  test_electron_flow.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  run_app.py  run_server.py
backend/.github/workflows/: ci-cd.yml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  main.py
backend/app/adapters/: __init__.py  akshare.py  base.py  broker_sim.py  tdx_adapter.py
backend/app/api/: __init__.py  accounts.py  ai.py  (+32 more)
backend/data/: .ws_token  market.db.wal  ws_stats.json
backend/deploy/: Dockerfile
backend/notebooks/: strategy_research.ipynb
backend/scripts/: backtest_3yr.py  backtest_optimize_wf.py  backtest_v12.py  cb_hist_cache.py  concept_rebuild_full.py  enrich_backtest_data.py  fast_concept_build_v2.py  fast_concept_build_v3.py  fast_concept_rebuild.py  merge_all_concepts.py  patch_concept_cache.py  sync_requirements.py  tdx_concept_expand.py
backend/tests/: conftest.py  test_active_strategies_persistence.py  test_ai_fallback.py  test_ai_risk_data.py  test_akshare_fallback.py  test_akshare_unlisted_filter.py  test_api.py  test_attribution.py  test_backtest.py  test_backtest_detail_optimization.py  test_backtest_lookahead.py  test_backtest_storage.py  test_backtest_stream.py  test_bayesian_optimizer.py  test_celery_monitoring.py  test_confidence.py  test_confidence_monitor.py  test_crash_fixes.py  test_data_adapter_changes.py  test_data_enrich_cache.py  test_data_enrich_metrics.py  test_data_source_api.py  test_data_sources.py  test_db_pool.py  test_dedup_persistence.py  test_deployment_configs.py  test_dual_low_filters.py  test_edge_cases.py  test_enhanced_timing_real_data.py  test_enhanced_timing_regression.py  test_enrich_quotes_merge.py  test_executed_position_persistence.py  test_extra_data_sources.py  test_filters.py  test_improved_timing.py  test_main_startup.py  test_market.py  test_missing_endpoints.py  test_nan_zero_semantics.py  test_paper_trade_no_hardcoded_price.py  (+26 more)
backend/wheels/: akshare-1.18.60-py3-none-any.whl  curl_cffi-0.15.0-cp310-abi3-macosx_11_0_arm64.whl  httptools-0.7.1-cp314-cp314-macosx_11_0_arm64.whl  pydantic_core-2.46.4-cp314-cp314-macosx_11_0_arm64.whl  uvloop-0.22.1-cp314-cp314-macosx_10_13_universal2.whl  watchfiles-1.1.1-cp314-cp314-macosx_11_0_arm64.whl  websockets-16.0-cp314-cp314-macosx_11_0_arm64.whl
(+751 files in other folders)
